tests/negative/runtime/format_two_markers_zero_args/input.ci
void main() {
    print(format("{} {}", []) + "\n");
}
